[package]
name = "oxid8"
version = "0.1.0"
edition = "2024"

[dependencies]
bit-set = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
winapi = "0.3.9"
hashlink = "0.10.0"

[profile.release]
debug = true


[[bin]]
name = "cli"
path = "bin/cli.rs"

[[bin]]
name = "concurrency"
path = "bin/concurrency.rs"
